# vibecode_vsts

./: README.md
2osc_fm/: CMakeLists.txt
2osc_fm/Source/: FMOperator.h  FMVoice.h  MatrixPage.h  OperatorsPage.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
6oscfm/: CMakeLists.txt  build.sh
6oscfm/Source/: Constants.h  FMOperator.h  FMVoice.h  MasterLimiter.h  MatrixPage.h  OperatorsPage.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PresetBar.h  SynthFilter.h
sequencer/: CMakeLists.txt
sequencer/Source/: PluginProcessor.cpp  PluginProcessor.h
six_sines/: CMakeLists.txt  README.md
six_sines/Source/: SynthCore.h
six_sounds/: CMakeLists.txt  MANUAL.md  README.md  build_debug.sh
six_sounds/Source/: CombFilter.h  Constants.h  EffectsPage.h  FMOperator.h  FMVoice.cpp  FMVoice.h  MasterLimiter.h  MatrixPage.h  OperatorsPage.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetBar.h  SynthFilter.h
six_sounds/binaries/standalone/MacOS/SixSounds.app/Contents/: Info.plist
six_sounds/binaries/vst3_builds/Linux/SixSounds.vst3/Contents/Resources/: moduleinfo.json
six_sounds/binaries/vst3_builds/MacOS/SixSounds.vst3/Contents/: Info.plist
six_sounds/binaries/vst3_builds/MacOS/SixSounds.vst3/Contents/Resources/: moduleinfo.json
six_sounds/binaries/vst3_builds/MacOS/SixSounds.vst3/Contents/_CodeSignature/: CodeResources
six_sounds/presets/: brass.xml  circuit.xml  drum2.xml  drumhit.xml  fm_wood_block.xml  harmonica.xml  haze.xml  hihat.xml  hihat2.xml  idk_a_synth.xml  keyswhomp.xml  kick.xml  kick2.xml  simplebass.xml  sort of a kick.xml  synth brass.xml  synth_2.xml  synth_brass_2.xml  xfiles_flute.xml
six_sounds/vst3_builds/Linux/SixSounds.vst3/Contents/Resources/: moduleinfo.json
six_sounds/vst3_builds/MacOS/SixSounds.vst3/Contents/Resources/: moduleinfo.json
six_sounds/vst3_builds/Windows/SixSounds.vst3/Contents/Resources/: moduleinfo.json
six_sounds/vst3_builds/Windows/SixSounds.vst3/Contents/x86_64-win/: SixSounds.vst3
six_sounds_evolved/: CMakeLists.txt  README.md  build.bat  build.sh  prompt.md
six_sounds_evolved/Source/: FMOperator.h  FMVoice.h  Filters.h  FiltersPage.h  MasterLimiter.h  MatrixPage.h  OperatorsPage.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetBar.h  SynthEngine.h  SynthFilter.h
six_sounds_evolved/vst3_builds/MacOS/SixSounds.vst3/Contents/: Info.plist
six_sounds_v1/: LICENSE  README.md  build.sh
six_sounds_v1/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
spectral_resonator/: CMakeLists.txt  README.md
spectral_resonator/Source/: PluginProcessor.cpp  PluginProcessor.h  SpectralEngine.h
